@@ -34,6 +34,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - when having pbs_mom re-read the config file, old servers were kept, and pbs_mom
       attempted to communicate with those as well. Now they are cleared and only the 
       new server(s) are contacted. (backported from 3.0.4)
+  b - pbsnodes -l can now search on all valid node states (backported from 3.0.4)
 
 
 2.5.9
